crates/solite-cli/src/commands/tui/snapshots/solite_cli__commands__tui__test_tui__tests__move to first column.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
---
"t2 (2 rows)                          Solite               ? help  q back  Q quit"
"c1              c2              c3               c4              c5             "
"              1               2                3               4               5"
"a               b               c                d               e              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                   Row 1 of 2                                   "
"────────────────────────────────────────────────────────────────────────────────"
" h/j/k/l navigate  Enter view row  [ sort asc  ] sort desc  y/c copy  q/Esc back"
