crates/solite-cli/src/commands/tui/snapshots/solite_cli__commands__tui__test_tui__tests__sorting feedback.snap
---
source: crates/solite-cli/src/commands/tui/test_tui.rs
expression: self.terminal.backend()
---
"nums (3+ rows)                       Solite               ? help  q back  Q quit"
"n   label                                                                       "
"  3 three                                                                       "
"  1 one                                                                         "
"  2 two                                                                         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                    Sorting…                                    "
"────────────────────────────────────────────────────────────────────────────────"
" h/j/k/l navigate  Enter view row  [ sort asc  ] sort desc  y/c copy  q/Esc back"
